# invesalius3

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pydevproject  AUTHORS.md  AUTHORS.txt  CMakeLists.txt  CONTRIBUTING_CHANGELOG.md  Dockerfile  HEADER.txt  IMPLEMENTATION_COMPLETE.md  INSTALL.txt  LICENSE.pt.txt  LICENSE.txt  NEWS.txt  README.md  README.txt  TESTING_PR_SUMMARY.md  TODO  TODO.txt  app.py  changelog.md  crash_fix_diff.txt  crop_src.py  data.csv  data_nav.csv  data_robot_and_tracker.csv  dcm4chee-compose.yml  df62a5e8_files.txt  diff_to_master.txt  docker-compose.yml  environment.yml  fix_surface_colour_crash.md  invesalius-digital-copyright-instructions.txt  invesalius-invesalius3-digital-copyright-04-01-2022.enc  measures_diff.txt  optional-requirements.txt  orthanc-compose.yml  (+14 more)
.github/workflows/: bundles.yml  cache.yml  main.yml  pre-commit.yml  run-tests.yml  tests.yml  win_base.yml
Tests/: test_publisher.py  test_session.py  test_tracker.py
ai/brain_mri_t1/: model.json
bundle_tools/mac/: app.spec
bundle_tools/win/: app.spec  generate_installer.iss  insert_version_date.py  install_vc.bat
contrib/: ABOUT  mandriva-locale.patch
docs/: NIFTI_MASK_IMPORT_TECHNICAL_DEEP_DIVE.md  error_handling_and_logging.md
docs/devel/: example_closure.py  example_pubsub.py  example_singleton.py  example_singleton_pubsub.py  sendmessages.txt  subscribes.txt
docs/user_guide_en_source/: Makefile  autores.tex  cap_cust.tex  cap_export.tex  cap_geren_dados.tex  cap_img.tex  cap_import.tex  cap_instal.tex  cap_manip.tex  cap_masc.tex  cap_med.tex  cap_nav.tex  cap_segmen.tex  cap_stereoscop.tex  cap_superf.tex  cap_visual_simult.tex  cap_visual_vol.tex  capa.tex  intro.tex  resumo.tex  user_guide_en.tex
docs/user_guide_pt_BR_source/: Makefile  autores.tex  cap_cust.tex  cap_export.tex  cap_geren_dados.tex  cap_img.tex  cap_import.tex  cap_instal.tex  cap_manip.tex  cap_masc.tex  cap_med.tex  cap_nav.tex  cap_segmen.tex  cap_stereoscop.tex  cap_superf.tex  cap_visual_simult.tex  cap_visual_vol.tex  capa.tex  intro.tex  manual_pt_BR.tex  resumo.tex
fmri_support/: README.md  display_utils.py  functional_processing.py  load_resources.py  main.py  tutorial-fmri_processing.ipynb
fmri_support/resources/: funcconnectivity-sub-01.npy
fmri_support/src/: __init__.py  constants.json  constants.py  utils.py
fmri_support/tutorial/: ds000102-00001.sh
i18n/: de.po  el.po  en.po  es.po  fr.po  invesalius_el.po  invesalius_en.po  invesalius_es.po  invesalius_pt_BR.po  it.po  ko.po  nl.po  pt.po  pt_BR.po  pt_PT.po  ro_RO.po  sd_IN.po  sv_SE.po  ta.po  tr_TR.po  zh_CN.po  zh_TW.po
icons/: bobina1.stl  invesalius.icns
invesalius/: .svnignore  __init__.py  __version__.py  constants.py  control.py  enhanced_logging.py  error_handling.py  expanduser.py  i18n.py  inv_paths.py  invesalius.py  math_utils.py  mode.py  plugins.py  presets.py  project.py  session.py  style.py  test_error_handling.py  update.py  utils.py  version.py
invesalius/bkps/: bases.py.bak  constants.py.bak  control.py.bak  dialogs.py.bak  frame.py.bak  task_navigator_bkp.py  viewer_slice.py.bak  viewer_volume.py.bak
invesalius/data/: actor_factory.py  bases.py  brainmesh_handler.py  camera_tracker.py  co_registration.py  command.py  commands.py  converters.py  coordinates.py  coregistration.py  coronary_fit.py  corregistration.py  crop_mask.py  cursor_actors.py  cy_mesh.pyx  cy_my_types.pxd  e_field.py  editor.py  elfin.py  elfin_processing.py  elfin_robot.py  example_pruebas.py  filters.py  floodfill.pyx  geometry.py  history_manager.py  imagedata_utils.py  interpolation.pxd  interpolation.pyx  log.py  (+38 more)
invesalius_cy/: CMakeLists.txt  cy_mesh.pyx  cy_my_types.pxd  floodfill.pyx  interpolation.pxd  interpolation.pyx  mask_cut.pyx  mips.pyx  transforms.pyx
invesalius_cy/invesalius/: constants.py  plugins.py  project.py  style.py
invesalius_cy/invesalius/data/: bases.py  converters.py  coordinates.py  e_field.py  editor.py  geometry.py  mask.py  polydata_utils.py  ruler.py  ruler_volume.py  serial_port_connection.py  styles.py  styles_3d.py  surface.py  surface_process.py  transformations.py  viewer_volume.py  volume.py  vtk_utils.py  watershed_process.py
invesalius_cy/invesalius/data/markers/: marker.py  marker_transformator.py
invesalius_cy/invesalius/data/visualization/: marker_visualizer.py
invesalius_cy/invesalius/gui/: deep_learning_seg_dialog.py  default_viewers.py  dialogs.py  import_bitmap_panel.py  import_panel.py  language_dialog.py  task_navigator.py  task_tools.py
invesalius_cy/invesalius/gui/widgets/: clut_raycasting.py  gradient.py  listctrl.py
invesalius_cy/invesalius/navigation/: iterativeclosestpoint.py  markers.py  navigation.py  tracker.py
invesalius_cy/invesalius/net/: dicom.py  remote_control.py  utils.py
invesalius_cy/invesalius/segmentation/deep_learning/: model.py  segment.py  utils.py
invesalius_cy_/: cy_mesh.pyx
invesalius_rs/: Cargo.toml  __init__.py  pyproject.toml
invesalius_rs_src/: Cargo.toml
pacs_connection/: config.json  constants.py  helpers.py  requirements.txt
po/: README.transifex  ar.po  be.po  ca.po  cs.po  de.po  el.po  en.po  es.po  fa.po  fr.po  invesalius.po  it.po  ja.po  ko.po  ms.po  nl.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  ta.po  tr_TR.po  ur_PK.po  uz.po  zh_CN.po  zh_TW.po
scratch/: check_rs.py  robust_check.py  verify_fix.py
scripts/: dicom_crop.py  invesalius_server.py  translate_utils.py
tests/: test_3mf.py  test_bone_thresholding.py  test_control.py  test_data_marker.py  test_dicom_loading.py  test_dicom_network.py  test_error_handling.py  test_import_bitmap_panel.py  test_mask.py  test_mask_cut.py  test_math_utils.py  test_mesh_generation.py  test_mesh_geometry_validation.py  test_mesh_validation.py  test_navigation.py  test_nifti_utils_hardening.py  test_ply_export.py  test_publisher.py  test_qef_solver.py  test_remote_control.py  test_segmentation_tools.py  test_session.py  test_stl_export.py  test_tracker.py  test_unet3D.py  test_utils.py  test_vtk_utils.py  test_vtp_export.py
(+788 files in other folders)
