[project]
name = "InVesalius"
version = "3.1.99998"
description = "3D medical imaging reconstruction software"
keywords = [
  "medical imaging",
  "dicom",
  "segmentation",
  "3D printing",
  "neuronavigation",
]
dependencies = [
    "cython==3.0.10",
    "h5py==3.11.0",
    "imageio==2.34.2",
    "matplotlib==3.9.0",
    "nibabel==5.2.1",
    "numpy==1.26.4",
    "optitrack ; python_full_version == '3.8.*' and sys_platform == 'windows'",
    "pillow==10.3.0",
    "plaidml-keras==0.7.0 ; python_full_version < '3.9'",
    "psutil==6.0.0",
    "pyacvd==0.2.11",
    "pyclaron ; python_full_version == '3.8.*' and sys_platform == 'windows'",
    "pypubsub==4.0.3",
    "pyserial==3.5",
    "python-gdcm==3.0.24",
    "scikit-image==0.24.0",
    "scipy==1.14.0",
    "setuptools-scm",
    "torch==2.3.1",
    "vtk==9.3.0",
    "wxpython==4.2.1",
]
license = { file = "LICENSE.txt" }
readme = "README.md"
requires-python = ">=3.10"


[dependency-groups]
dev = [
    "aioconsole==0.7.1",
    "mido==1.2.10",
    "mypy==1.10.1",
    "nest-asyncio==1.6.0",
    "pre-commit~=3.7.1",
    "python-rtmidi==1.5.8",
    "python-socketio[client]==5.11.3",
    "requests==2.32.3",
    "ruff~=0.5.0",
    "scikit-learn==1.5.0",
    "uvicorn[standard]==0.30.1",
    "scikit-build-core",
]


[project.gui-scripts]
inv = 'invesalius.app:main'


[build-system]
requires = ["scikit-build-core", "cython >= 3.0.2", "numpy >= 1.26.4"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
experimental = true
wheel.packages = ["invesalius","invesalius_cy"]
editable.mode = "inplace"


[tool.setuptools]
packages = ["invesalius","invesalius_cy"]


[tool.mypy]
mypy_path = "typings"
show_error_codes = true
check_untyped_defs = false
disallow_any_generics = false
disallow_incomplete_defs = false
disallow_untyped_defs = false
warn_redundant_casts = false
warn_unused_ignores = false
no_implicit_optional = false
strict_equality = false
warn_return_any = false
warn_unreachable = false
warn_unused_configs = false
no_implicit_reexport = false
follow_imports = "skip" # change to normal later
explicit_package_bases = true
disable_error_code =  ["attr-defined", "no-redef"]


[[tool.mypy.overrides]]
module = 'wx.*'
disable_error_code = ["no-redef"] # because some classes are redefined in the stubs
[[tool.mypy.overrides]]
module = [
    'wx.*',
    'vtkmodules.*',
    'pubsub.*',
    'scipy.*',
    'skimage.*',
    'serial.*',
    'gdcm.*',
    'pyacvd.*',
    'vtk.*',
    'scipy.spatial.*',
    'invesalius.data.camera_tracker.*',
    'aioconsole.*',
    'nest_asyncio.*',
    'uvicorn.*',
    'polhemus.*',
    'polhemusFT.*',
    'pyclaron.*',
    'urllib2.*',
    'optitrack.*',
    'ordereddict.*',
    'keras.*',
    'Image.*',
    'mido.*',
    'ConfigParser.*',
    'Queue.*',
    'weakrefmethod.*',
    'torchviz.*',
    'Trekker.*',
    'sklearn.*',
    'usb.*',
    'plaidml.*',
    'pypolaris.*',
    'pypolarisP4.*',
    'socketio.*',
    'setuptools.*',
    'psutil.*',
    'h5py.*',
    'info.*',
    'pandas.*',
    'PIL.*',
    'win32com.client.*',
    'win32com.*',
    'sigar.*',
    'numpy.*',
]
ignore_missing_imports = true


[tool.ruff]
include = ["pyproject.toml", "invesalius/**/*.py",'setup.py','app.py',"typings/**/*.pyi"]
line-length = 100
# extend-exclude = ["plugins"]

[tool.ruff.lint]
extend-select = ["UP","I"] # Introduces linting rules for pyupgrade and isort
extend-ignore = ["E731"]

[tool.ruff.format]
line-ending = "lf"

